# .emacs.d

./: .gitignore  init.el
eshell/: alias
jongyoungcha/: chan-cursor-tracker.el  jo-bundle.el  jong-assist.el  jong-bash.el  jong-bookmark.el  jong-brth-test.el  jong-buffer.el  jong-c.el  jong-cc.el  jong-cmake.el  jong-code.el  jong-common.el  jong-cursor-tracker.el  jong-cursor.el  jong-dap-debug.el  jong-debug-settings.el  jong-dotenv.el  jong-eglot.el  jong-elisp.el  jong-env-setting.el  jong-eshell.el  jong-ether-test.el  jong-exwm.el  jong-fabric.el  jong-font-locks.el  jong-git.el  jong-go.el  jong-grpc.el  jong-haskell.el  jong-helm.el  jong-html.el  jong-http.el  jong-java.el  jong-journal.el  jong-key-bindings.el  jong-kotlin.el  jong-kubernetes.el  jong-lsp.el  jong-makefile.el  jong-minor-eos.el  (+25 more)
jongyoungcha/init_cpp_project/: .dir-locals.el  CMakeLists.txt  build.py
jongyoungcha/jong-scala/: jong-scala.el
snippets/c++-mode/: cout  for  fore  if  inc  map  ret  str  using  vec
snippets/c-mode/: ferr  for  if  ifel  include  int_func  malloc  print  ret  switch  typest
snippets/cc-mode/: def  elif  fout  func  if  ifel  snp  st  void_func  while
snippets/go-mode/: func  import  print
